Fix invalid syntax for JDK8